--- a/app/src/main/res/layout/activity_tournament_view_inches.xml
+++ b/app/src/main/res/layout/activity_tournament_view_inches.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:fillViewport="true"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,56 +14,6 @@
     android:background="@color/Log_red_secondary"
     tools:context=".CatchEntryTournamentInches">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="235dp"
-        android:layout_height="61dp"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="5dp"
-        android:contentDescription="@string/app_image_description"
-        android:scaleX="1.5"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.085"
-        app:layout_constraintHorizontal_bias="0.8"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintWidth_percent="0.4"
-        app:srcCompat="@drawable/voice_controlled_culling_words" />
-
-    <Button
-        android:id="@+id/btnStartFishingInches"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="10dp"
-        android:background="@color/softlock_blue"
-        android:gravity="center"
-        android:shadowColor="#8FC16D"
-        android:text="@string/addCatchBtn"
-        android:textColor="@color/clip_white"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintHeight_percent="0.09"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintWidth_percent="0.55" />
-
-    <Button
-        android:id="@+id/btnAlarmInches"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="#80C5D2E8"
-        android:gravity="center"
-        android:hint="@string/days_End_time"
-        android:text="@string/alarm"
-        android:textAllCaps="true"
-        android:textColor="@color/clip_red"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@id/btnStartFishingInches"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.085"
-        app:layout_constraintStart_toEndOf="@id/btnStartFishingInches"
-        app:layout_constraintWidth_percent="0.3" />
 
     <TextClock
         android:id="@+id/timeNOW"
@@ -75,6 +31,61 @@
         app:layout_constraintWidth_percent="0.4"
         tools:text="@string/timer_place_holder" />
 
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="235dp"
+        android:layout_height="61dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="5dp"
+        android:contentDescription="@string/app_image_description"
+        android:scaleX="1.5"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.085"
+        app:layout_constraintHorizontal_bias="0.8"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintWidth_percent="0.4"
+        app:srcCompat="@drawable/voice_controlled_culling_words" />
+
+
+    <Button
+        android:id="@+id/btnAlarmInches"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintWidth_percent="0.3"
+        app:layout_constraintHeight_percent="0.085"
+        android:background="#80C5D2E8"
+        android:gravity="center"
+        android:hint="@string/days_End_time"
+        android:text="@string/alarm"
+        android:textAllCaps="true"
+        android:textColor="@color/clip_red"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/timeNOW"
+        app:layout_constraintStart_toStartOf="@id/timeNOW" />
+
+    <Button
+        android:id="@+id/btnStartFishingInches"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintHeight_percent="0.09"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="10dp"
+        android:background="@color/softlock_blue"
+        android:gravity="center"
+        android:shadowColor="#8FC16D"
+        android:text="@string/addCatchBtn"
+        android:textColor="@color/clip_white"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintWidth_percent="0.55" />
+
+
     <TextView
         android:id="@+id/txtInchesColorLetter1"
         android:layout_width="0dp"
@@ -85,7 +96,7 @@
         android:gravity="center"
         android:textAlignment="center"
         android:textColor="@color/black"
-        android:textSize="45sp"
+        android:textSize="40sp"
         app:layout_constraintHeight_percent="0.085"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/btnStartFishingInches"
@@ -100,7 +111,7 @@
         android:gravity="center"
         android:textAlignment="center"
         android:textColor="@color/black"
-        android:textSize="45sp"
+        android:textSize="40sp"
         app:layout_constraintHeight_percent="0.085"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/txtInchesColorLetter1"
@@ -115,7 +126,7 @@
         android:gravity="center"
         android:textAlignment="center"
         android:textColor="@color/black"
-        android:textSize="45sp"
+        android:textSize="40sp"
         app:layout_constraintHeight_percent="0.085"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/txtInchesColorLetter2"
@@ -130,7 +141,7 @@
         android:gravity="center"
         android:textAlignment="center"
         android:textColor="@color/black"
-        android:textSize="45sp"
+        android:textSize="40sp"
         app:layout_constraintHeight_percent="0.085"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/txtInchesColorLetter3"
@@ -145,7 +156,7 @@
         android:gravity="center"
         android:textAlignment="center"
         android:textColor="@color/black"
-        android:textSize="45sp"
+        android:textSize="40sp"
         app:layout_constraintHeight_percent="0.085"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/txtInchesColorLetter4"
@@ -160,7 +171,7 @@
         android:gravity="center"
         android:textAlignment="center"
         android:textColor="@color/black"
-        android:textSize="45sp"
+        android:textSize="40sp"
         app:layout_constraintHeight_percent="0.085"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/txtInchesColorLetter5"
@@ -355,7 +366,7 @@
         android:id="@+id/sixthDecLengthInches"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="4dp"
         android:background="@color/grey"
         android:text="18 ozs"
         android:textAlignment="center"
@@ -509,6 +520,8 @@
         android:id="@+id/totalDecLengthInches"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        app:layout_constraintWidth_percent="0.1"
+        app:layout_constraintHeight_percent="0.1"
         android:layout_marginStart="5dp"
         android:background="@color/clip_white"
         android:gravity="center"
@@ -517,9 +530,8 @@
         android:textSize="48sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@id/totalRealLengthInches"
-        app:layout_constraintHeight_percent="0.1"
         app:layout_constraintStart_toEndOf="@id/txtLbHolder"
-        app:layout_constraintWidth_percent="0.2" />
+ />
 
     <TextView
         android:id="@+id/txtHolderOzs"
@@ -535,6 +547,23 @@
         app:layout_constraintBottom_toBottomOf="@id/totalDecLengthInches"
         app:layout_constraintStart_toEndOf="@id/totalDecLengthInches" />
 
+
+    <Button
+        android:id="@+id/btnMainInches"
+        android:layout_width="wrap_content"
+        android:layout_height="55dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/btn_outline_blue"
+        android:text="@string/main_page"
+        android:textAlignment="gravity"
+        android:textSize="25sp"
+        app:layout_constraintHeight_percent="0.11"
+        app:layout_constraintHorizontal_bias="0.103"
+        app:layout_constraintEnd_toEndOf="@id/firstRealLengthInches"
+        app:layout_constraintTop_toBottomOf="@id/totalRealLengthInches"
+        app:layout_constraintWidth_percent="0.25" />
+
     <Button
         android:id="@+id/btnSetUpInches"
         android:layout_width="wrap_content"
@@ -549,21 +578,7 @@
         app:layout_constraintTop_toBottomOf="@id/totalRealLengthInches"
         app:layout_constraintWidth_percent="0.25" />
 
-    <Button
-        android:id="@+id/btnMainInches"
-        android:layout_width="wrap_content"
-        android:layout_height="55dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/btn_outline_blue"
-        android:text="@string/main_page"
-        android:textAlignment="gravity"
-        android:textSize="25sp"
-        app:layout_constraintHeight_percent="0.11"
-        app:layout_constraintHorizontal_bias="0.103"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/totalRealLengthInches"
-        app:layout_constraintWidth_percent="0.25" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
