--- a/app/src/main/res/layout/activity_tournament_view_centimeters.xml
+++ b/app/src/main/res/layout/activity_tournament_view_centimeters.xml
@@ -1,12 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:fillViewport="true"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/clip_yellow"
     tools:context=".CatchEntryTournamentCentimeters">
+
+
+    <TextClock
+        android:id="@+id/timeNOW"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="5dp"
+        android:background="@color/clip_white"
+        android:gravity="center"
+        android:textSize="34sp"
+        android:textStyle="bold"
+        app:layout_constraintHeight_percent="0.085"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintWidth_percent="0.4"
+        tools:text="@string/timer_place_holder" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -25,26 +47,11 @@
         app:srcCompat="@drawable/voice_controlled_culling_words" />
 
     <Button
-        android:id="@+id/btnStartFishingCms"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="10dp"
-        android:background="@color/softlock_blue"
-        android:gravity="center"
-        android:shadowColor="#8FC16D"
-        android:text="@string/addCatchBtn"
-        android:textColor="@color/clip_white"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintHeight_percent="0.09"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintWidth_percent="0.55" />
-
-    <Button
         android:id="@+id/btnAlarmCms"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        app:layout_constraintWidth_percent="0.3"
+        app:layout_constraintHeight_percent="0.09"
         android:background="#80C5D2E8"
         android:gravity="center"
         android:hint="@string/days_End_time"
@@ -53,27 +60,27 @@
         android:textColor="@color/clip_red"
         android:textSize="30sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@id/btnStartFishingCms"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.085"
-        app:layout_constraintStart_toEndOf="@id/btnStartFishingCms"
-        app:layout_constraintWidth_percent="0.3" />
+        android:layout_marginTop="5dp"
+        app:layout_constraintTop_toBottomOf="@id/timeNOW"
+        app:layout_constraintStart_toStartOf="@id/timeNOW" />
 
-    <TextClock
-        android:id="@+id/timeNOW"
+
+    <Button
+        android:id="@+id/btnStartFishingCms"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="5dp"
-        android:background="@color/clip_white"
+        app:layout_constraintHeight_percent="0.09"
+        app:layout_constraintWidth_percent="0.55"
+        android:background="@color/softlock_blue"
         android:gravity="center"
-        android:textSize="34sp"
+        android:shadowColor="#8FC16D"
+        android:text="@string/addCatchBtn"
+        android:textColor="@color/clip_white"
+        android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintHeight_percent="0.085"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintWidth_percent="0.4"
-        tools:text="@string/timer_place_holder" />
+        android:layout_marginEnd="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/btnAlarmCms" />
 
     <TextView
         android:id="@+id/txtCmsColorLetter1"
@@ -85,7 +92,7 @@
         android:gravity="center"
         android:textAlignment="center"
         android:textColor="@color/black"
-        android:textSize="45sp"
+        android:textSize="40sp"
         app:layout_constraintHeight_percent="0.085"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/btnStartFishingCms"
@@ -100,7 +107,7 @@
         android:gravity="center"
         android:textAlignment="center"
         android:textColor="@color/black"
-        android:textSize="45sp"
+        android:textSize="40sp"
         app:layout_constraintHeight_percent="0.085"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/txtCmsColorLetter1"
@@ -115,7 +122,7 @@
         android:gravity="center"
         android:textAlignment="center"
         android:textColor="@color/black"
-        android:textSize="45sp"
+        android:textSize="40sp"
         app:layout_constraintHeight_percent="0.085"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/txtCmsColorLetter2"
@@ -130,7 +137,7 @@
         android:gravity="center"
         android:textAlignment="center"
         android:textColor="@color/black"
-        android:textSize="45sp"
+        android:textSize="40sp"
         app:layout_constraintHeight_percent="0.085"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/txtCmsColorLetter3"
@@ -145,7 +152,7 @@
         android:gravity="center"
         android:textAlignment="center"
         android:textColor="@color/black"
-        android:textSize="45sp"
+        android:textSize="40sp"
         app:layout_constraintHeight_percent="0.085"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/txtCmsColorLetter4"
@@ -155,12 +162,12 @@
         android:id="@+id/txtCmsColorLetter6"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="4dp"
         android:gravity="center"
         android:textAlignment="center"
         android:textColor="@color/black"
-        android:textSize="45sp"
+        android:textSize="40sp"
         app:layout_constraintHeight_percent="0.085"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/txtCmsColorLetter5"
@@ -507,6 +514,8 @@
         android:id="@+id/totalDecLengthCms"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        app:layout_constraintWidth_percent="0.12"
+        app:layout_constraintHeight_percent="0.1"
         android:background="@color/clip_white"
         android:gravity="center"
         android:textAlignment="gravity"
@@ -514,9 +523,7 @@
         android:textSize="48sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@id/totalRealLengthCms"
-        app:layout_constraintHeight_percent="0.1"
-        app:layout_constraintStart_toEndOf="@id/txtCmsHolder"
-        app:layout_constraintWidth_percent="0.2" />
+        app:layout_constraintStart_toEndOf="@id/txtCmsHolder" />
 
     <TextView
         android:id="@+id/txtHolderCms"
@@ -536,34 +543,31 @@
         android:id="@+id/btnSetUpCms"
         android:layout_width="wrap_content"
         android:layout_height="55dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="15dp"
+        app:layout_constraintWidth_percent="0.25"
+        app:layout_constraintHeight_percent="0.11"
         android:paddingHorizontal="10dp"
         android:background="@drawable/btn_outline_green"
         android:text="@string/setup"
         android:textAlignment="gravity"
         android:textSize="25sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.11"
-        app:layout_constraintHorizontal_bias="0.103"
-        app:layout_constraintTop_toBottomOf="@id/totalRealLengthCms"
-        app:layout_constraintWidth_percent="0.25" />
+        app:layout_constraintStart_toStartOf="@id/totalDecLengthCms"
+        app:layout_constraintTop_toTopOf="@id/btnMainCms"  />
 
     <Button
         android:id="@+id/btnMainCms"
         android:layout_width="wrap_content"
         android:layout_height="55dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="5dp"
         android:background="@drawable/btn_outline_blue"
         android:text="@string/main_page"
         android:textAlignment="gravity"
         android:textSize="25sp"
         app:layout_constraintHeight_percent="0.11"
         app:layout_constraintHorizontal_bias="0.103"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/totalRealLengthCms"
         app:layout_constraintTop_toBottomOf="@id/totalRealLengthCms"
         app:layout_constraintWidth_percent="0.25" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
