--- a/app/src/main/res/layout/activity_tournament_view_kgs.xml
+++ b/app/src/main/res/layout/activity_tournament_view_kgs.xml
@@ -1,64 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:fillViewport="true"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/clip_orange"
     tools:context=".CatchEntryTournamentKgs">
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="235dp"
-        android:layout_height="61dp"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="5dp"
-        android:contentDescription="@string/app_image_description"
-        android:scaleX="1.5"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.085"
-        app:layout_constraintHorizontal_bias="0.8"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintWidth_percent="0.4"
-        app:srcCompat="@drawable/voice_controlled_culling_words" />
-
-    <Button
-        android:id="@+id/btnStartFishingKgs"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="10dp"
-        android:background="@color/softlock_blue"
-        android:gravity="center"
-        android:shadowColor="#8FC16D"
-        android:text="@string/addCatchBtn"
-        android:textColor="@color/clip_white"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintHeight_percent="0.09"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintWidth_percent="0.55" />
-
-    <Button
-        android:id="@+id/btnAlarmKgs"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="#80C5D2E8"
-        android:gravity="center"
-        android:hint="@string/days_End_time"
-        android:text="@string/alarm"
-        android:textAllCaps="true"
-        android:textColor="@color/clip_red"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@id/btnStartFishingKgs"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.085"
-        app:layout_constraintHorizontal_bias="0.532"
-        app:layout_constraintStart_toEndOf="@id/btnStartFishingKgs"
-        app:layout_constraintWidth_percent="0.3" />
 
     <TextClock
         android:id="@+id/timeNOW"
@@ -76,6 +28,60 @@
         app:layout_constraintWidth_percent="0.4"
         tools:text="@string/timer_place_holder" />
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="235dp"
+        android:layout_height="61dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="5dp"
+        android:contentDescription="@string/app_image_description"
+        android:scaleX="1.5"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.085"
+        app:layout_constraintHorizontal_bias="0.8"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintWidth_percent="0.4"
+        app:srcCompat="@drawable/voice_controlled_culling_words" />
+
+
+    <Button
+        android:id="@+id/btnAlarmKgs"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="4dp"
+        app:layout_constraintWidth_percent="0.35"
+        app:layout_constraintHeight_percent="0.09"
+        android:background="#80C5D2E8"
+        android:gravity="center"
+        android:hint="@string/days_End_time"
+        android:text="@string/alarm"
+        android:textAllCaps="true"
+        android:textColor="@color/clip_red"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@id/timeNOW"
+        app:layout_constraintTop_toBottomOf="@id/imageView"/>
+
+
+    <Button
+        android:id="@+id/btnStartFishingKgs"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="4dp"
+        android:background="@color/softlock_blue"
+        android:gravity="center"
+        android:shadowColor="#8FC16D"
+        android:text="@string/addCatchBtn"
+        android:textColor="@color/clip_white"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:layout_marginEnd="5dp"
+        app:layout_constraintHeight_percent="0.09"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintWidth_percent="0.55" />
+
     <TextView
         android:id="@+id/txtKgsColorLetter1"
         android:layout_width="0dp"
@@ -86,7 +92,7 @@
         android:gravity="center"
         android:textAlignment="center"
         android:textColor="@color/black"
-        android:textSize="45sp"
+        android:textSize="40sp"
         app:layout_constraintHeight_percent="0.085"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/btnStartFishingKgs"
@@ -101,7 +107,7 @@
         android:gravity="center"
         android:textAlignment="center"
         android:textColor="@color/black"
-        android:textSize="45sp"
+        android:textSize="40sp"
         app:layout_constraintHeight_percent="0.085"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/txtKgsColorLetter1"
@@ -116,7 +122,7 @@
         android:gravity="center"
         android:textAlignment="center"
         android:textColor="@color/black"
-        android:textSize="45sp"
+        android:textSize="40sp"
         app:layout_constraintHeight_percent="0.085"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/txtKgsColorLetter2"
@@ -131,7 +137,7 @@
         android:gravity="center"
         android:textAlignment="center"
         android:textColor="@color/black"
-        android:textSize="45sp"
+        android:textSize="40sp"
         app:layout_constraintHeight_percent="0.085"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/txtKgsColorLetter3"
@@ -146,7 +152,7 @@
         android:gravity="center"
         android:textAlignment="center"
         android:textColor="@color/black"
-        android:textSize="45sp"
+        android:textSize="40sp"
         app:layout_constraintHeight_percent="0.085"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/txtKgsColorLetter4"
@@ -161,7 +167,7 @@
         android:gravity="center"
         android:textAlignment="center"
         android:textColor="@color/black"
-        android:textSize="45sp"
+        android:textSize="40sp"
         app:layout_constraintHeight_percent="0.085"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/txtKgsColorLetter5"
@@ -532,6 +538,18 @@
         app:layout_constraintStart_toEndOf="@id/totalDecWeightKgs" />
 
     <Button
+        android:id="@+id/btnMainKgs"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/btn_outline_green"
+        android:text="@string/main_page"
+        android:textAlignment="gravity"
+        android:textSize="25sp"
+        app:layout_constraintStart_toStartOf="@id/firstRealWeightKgs"
+        app:layout_constraintTop_toBottomOf="@id/totalRealWeightKgs" />
+
+    <Button
         android:id="@+id/btnSetUpKgs"
         android:layout_width="wrap_content"
         android:layout_height="55dp"
@@ -544,17 +562,9 @@
         app:layout_constraintEnd_toEndOf="@id/fifthDecWeightKgs"
         app:layout_constraintTop_toBottomOf="@id/totalRealWeightKgs" />
 
-    <Button
-        android:id="@+id/btnMainKgs"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/btn_outline_green"
-        android:text="@string/main_page"
-        android:textAlignment="gravity"
-        android:textSize="25sp"
-        app:layout_constraintStart_toStartOf="@id/firstRealWeightKgs"
-        app:layout_constraintTop_toBottomOf="@id/totalRealWeightKgs" />
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+</ScrollView>
