--- a/app/src/main/res/layout/popup_weight_entry_tour_kgs.xml
+++ b/app/src/main/res/layout/popup_weight_entry_tour_kgs.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -108,10 +108,10 @@
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:layout_weight="1"
-                android:textColor="@color/black"
+                android:gravity="center"
                 android:hint="00.XX"
                 android:inputType="number"
-                android:gravity="center"/>
+                android:textColor="@color/black" />
 
             <TextView
                 android:id="@+id/textView9"
