--- a/app/src/main/res/layout/spinner_species_item.xml
+++ b/app/src/main/res/layout/spinner_species_item.xml
@@ -1,22 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
-    android:padding="8dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="center_vertical">
+    android:background="@color/very_lite_grey"
+    android:gravity="center_vertical"
+    android:orientation="horizontal"
+    android:paddingStart="8dp"
+    android:paddingLeft="8dp"
+    android:paddingRight="8dp">
 
     <ImageView
         android:id="@+id/imgSpecies"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:scaleType="centerInside"
-        android:layout_marginEnd="12dp" />
+        android:layout_marginEnd="12dp"
+        android:scaleType="centerInside" />
 
     <TextView
         android:id="@+id/txtSpeciesName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="18sp"
-        android:textColor="#000000" />
+        android:textColor="#000000"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 </LinearLayout>
