--- a/app/src/main/res/layout/user_training_index.xml
+++ b/app/src/main/res/layout/user_training_index.xml
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<ScrollView android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:fillViewport="true"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@color/Log_green_secondary"
     android:contentDescription="@string/app_image_description">
 
@@ -125,6 +131,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_weight=".4"
+            android:padding="2dp"
             android:background="@color/clip_blue"
             android:text="@string/fund_day_length"
             android:textColor="@color/clip_white"
@@ -300,3 +307,5 @@
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+</ScrollView>
