--- a/app/src/main/res/layout/activity_tournament_view.xml
+++ b/app/src/main/res/layout/activity_tournament_view.xml
@@ -556,6 +556,7 @@
         android:id="@+id/btnMainPg"
         android:layout_width="wrap_content"
         android:layout_height="55dp"
+        android:padding="5dp"
         android:layout_marginTop="5dp"
         android:background="@drawable/btn_outline_green"
         android:text="@string/main_page"
@@ -568,12 +569,13 @@
         android:id="@+id/btnMenu"
         android:layout_width="wrap_content"
         android:layout_height="55dp"
+        android:padding="5dp"
         android:background="@drawable/btn_outline_blue"
         android:text="@string/setup"
         android:textAlignment="gravity"
         android:textSize="25sp"
         app:layout_constraintTop_toTopOf="@id/btnMainPg"
-        app:layout_constraintStart_toStartOf="@+id/firstDecWeight"
+        app:layout_constraintEnd_toEndOf="@+id/firstDecWeight"
         app:layout_constraintTop_toBottomOf="@id/totalRealWeight"
  />
 
