--- a/app/src/main/res/layout/activity_tournament_view_kgs.xml
+++ b/app/src/main/res/layout/activity_tournament_view_kgs.xml
@@ -542,6 +542,7 @@
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_marginTop="10dp"
+        android:padding="5dp"
         android:background="@drawable/btn_outline_green"
         android:text="@string/main_page"
         android:textAlignment="gravity"
@@ -553,16 +554,15 @@
         android:id="@+id/btnSetUpKgs"
         android:layout_width="wrap_content"
         android:layout_height="55dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="15dp"
+        android:padding="5dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
         android:background="@drawable/btn_outline_blue"
         android:text="@string/setup"
         android:textAlignment="gravity"
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="@id/fifthDecWeightKgs"
         app:layout_constraintTop_toBottomOf="@id/totalRealWeightKgs" />
-
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
