--- a/app/src/main/res/layout/user_training_voice_commands.xml
+++ b/app/src/main/res/layout/user_training_voice_commands.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+
 <ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,42 +10,38 @@
 
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/Log_green_secondary"
-    android:contentDescription="@string/app_image_description">
-
+    android:layout_height="match_parent"
+    android:background="@color/softlock_green">
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/imgVCC"
         android:layout_width="0dp"
         android:layout_height="85dp"
         android:layout_marginTop="15dp"
-        android:layout_marginBottom="25dp"
+        android:layout_marginBottom="15dp"
         android:contentDescription="@string/app_image_description"
-        app:layout_constraintBottom_toTopOf="@+id/ManualMode1linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/catch_call_words_blue" />
 
-
-       <LinearLayout
+    <LinearLayout
         android:id="@+id/ManualMode1linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="15dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/imageView3">
+        app:layout_constraintTop_toBottomOf="@id/imgVCC">
 
         <TextView
             android:id="@+id/textView4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:paddingVertical="20dp"
-            android:text="@string/using_culling_app_in_manual_mode"
+            android:paddingHorizontal="25dp"
+            android:layout_marginTop="15dp"
+            android:text="@string/using_voice_controls"
             android:textColor="@color/black"
             android:textSize="30sp"
             android:textStyle="bold" />
@@ -102,144 +99,62 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/llSelect" />
 
-    <LinearLayout
-        android:id="@+id/llButtons"
-        android:layout_width="0dp"
+    <Button
+        android:id="@+id/btnWhatIsVCC"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:orientation="horizontal"
-        android:paddingTop="10dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/btn_outline_green"
+        android:padding="15dp"
+        android:text="What is Voice Command Control"
+        android:textColor="@color/clip_blue"
+        android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/divider2">
+        app:layout_constraintTop_toBottomOf="@id/divider2" />
+
+    <Button
+            android:id="@+id/btnEnableVCC"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/btn_outline_red"
+            android:text="@string/enabling_voice_controls"
+            android:textColor="@color/clip_blue"
+            android:textSize="20sp"
+            android:padding="15dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/btnWhatIsVCC"
+            android:layout_marginTop="15dp"/>
 
         <Button
-            android:id="@+id/btnFundDayWeight"
-            style="@style/Widget.AppCompat.Button.Colored"
-            android:layout_width="0dp"
+            android:id="@+id/btnTeachVCC"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_weight=".4"
-            android:background="@color/clip_blue"
-            android:text="@string/fun_day_weight"
-            android:textColor="@color/clip_white"
-            android:textSize="20sp" />
-
-        <Button
-            android:id="@+id/btnFundDayLength"
-            style="@style/Widget.AppCompat.Button"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_weight=".4"
-            android:padding="2dp"
-            android:background="@color/clip_blue"
-            android:text="@string/fund_day_length"
-            android:textColor="@color/clip_white"
-            android:textSize="20sp" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/llButtons3"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_weight="1"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/llButtons">
-
-        <Button
-            android:id="@+id/btnTournamentWeight"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_weight=".4"
-            android:background="@color/clip_orange"
-            android:text="@string/tournament_weight"
-            android:textColor="@color/black"
-            android:textSize="20sp" />
-
-        <Button
-            android:id="@+id/btnTournamentLength"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_weight=".4"
-            android:background="@color/clip_orange"
-            android:text="@string/tournament_length"
-            android:textColor="@color/black"
-            android:textSize="20sp" />
-    </LinearLayout>
+            android:background="@drawable/btn_outline_blue"
+            android:text="Teaching Voice Control"
+            android:textColor="@color/clip_blue"
+            android:textSize="20sp"
+            android:padding="15dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/btnEnableVCC"
+            android:layout_marginTop="15dp" />
 
     <View
-        android:id="@+id/divider4"
+        android:id="@+id/divider9"
         android:layout_width="0dp"
         android:layout_height="5dp"
-        android:layout_marginVertical="10dp"
+        android:layout_marginVertical="15dp"
+        android:layout_marginTop="12dp"
         android:background="@color/black"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/llButtons3" />
+        app:layout_constraintTop_toBottomOf="@id/btnTeachVCC"/>
 
-
-    <LinearLayout
-        android:id="@+id/llGPS"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:layout_weight="1"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/divider4">
-
-        <Button
-            android:id="@+id/btnWhatIsGPS"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_weight=".4"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/btn_outline_blue"
-            android:padding="10dp"
-            android:text="Set Up GPS"
-            android:textSize="20sp" />
-
-        <Button
-            android:id="@+id/btnMappingGPS"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_weight=".4"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/btn_outline_blue"
-            android:padding="10dp"
-            android:text="Mapping GPS"
-            android:textSize="20sp" />
-
-    </LinearLayout>
-
-    <View
-        android:id="@+id/divider5"
-        android:layout_width="0dp"
-        android:layout_height="5dp"
-        android:layout_marginVertical="10dp"
-        android:background="@color/black"
-        android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/llGPS" />
 
     <LinearLayout
 
@@ -251,7 +166,7 @@
         android:paddingVertical="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/divider5">
+        app:layout_constraintTop_toBottomOf="@id/divider9">
 
         <Button
             android:id="@+id/btnMenuUser"
@@ -265,7 +180,7 @@
             android:textAllCaps="true"
             android:textColor="@color/black"
             android:textSize="20sp"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
 
         <Button
             android:id="@+id/btnSetUpUser"
@@ -278,10 +193,9 @@
             android:text="@string/img_setup"
             android:textColor="@color/black"
             android:textSize="20sp"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
 
     </LinearLayout>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
