--- a/app/src/main/res/layout/activity_training_words.xml
+++ b/app/src/main/res/layout/activity_training_words.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:fillViewport="true"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -125,7 +133,7 @@
 
 
     <Button
-        android:id="@+id/btUserTalk"
+        android:id="@+id/btnUserTalk"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
@@ -156,7 +164,7 @@
         android:background="@color/clip_white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btUserTalk"/>
+        app:layout_constraintTop_toBottomOf="@id/btnUserTalk"/>
     <View
         android:id="@+id/divider9"
         android:layout_width="0dp"
@@ -195,7 +203,7 @@
             android:textStyle="bold" />
 
         <Button
-            android:id="@+id/btnSetUpVcc"
+            android:id="@+id/btnSetUpVCC"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
@@ -210,3 +218,5 @@
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+</ScrollView>
