--- a/app/src/main/res/layout/popup_phrase_list_statues.xml
+++ b/app/src/main/res/layout/popup_phrase_list_statues.xml
@@ -18,7 +18,7 @@
         android:scaleType="centerInside" />
 
     <TextView
-        android:id="@+id/txtSayThis"
+        android:id="@+id/txtPhraseText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/say_the_key_words"
@@ -26,5 +26,6 @@
         android:textSize="20sp"
         android:textStyle="bold"
         android:padding="10dp"/>
+
 
 </LinearLayout>
